@@ -3,6 +3,8 @@
 ### 1.7.1
 * Customizer colour swatch: print the custom styles in footer
 * Lazy Loading Images: add a class to bypass a image
+* Banners: resolved conflict between LSX Banners and LSX
+* Customize Colors: fixed the box-shadow color from articles in blog pages
 
 ### 1.7.0
 * Added a colour swatch to customizer
